# adyghe-latin-utils

./: .cursorignore  .gitignore  1  2  CHANGELOG.md  LICENSE  LIMITATIONS.md  PUBLISHING.md  README.he.md  README.md  README.ru.md  README.tr.md  pyproject.toml
.cursor/rules/: project-instructions.mdc
docs/: AdigaNumberUtils.md
src/adyghe_latin_utils/: __init__.py  character_utils.py  number_utils.py
tests/: generate_regression_texts_cyr.py  regression_comparator.py  regression_compare.py  regression_texts_cyr.txt  regression_texts_cyr_golden.txt  regression_texts_lat.txt  regression_texts_lat_golden.txt  roundtrip_corpus.py  sentence_extraction.py  test_adiga_number_utils.py  test_cli_adiga_character_utils.py  test_cyrillic_to_latin.py  test_generate_regression_texts_cyr.py  test_latin_to_cyrillic.py  test_sanitize_latin_text.py
tests/regression_reports/: cyrillic_to_latin_report.txt  latin_to_cyrillic_report.txt  roundtrip_report.txt
tests/text_files/: 10_cyr.txt  11_cyr.txt  12_cyr.txt  13_cyr.txt  14_cyr.txt  15_cyr.txt  16_cyr.txt  1_cyr.txt  2_cyr.txt  3_cyr.txt  4_cyr.txt  5_cyr.txt  7_cyr.txt  8_cyr.txt  9_cyr.txt  tijin_tas_cyr.txt
